[project]
name = "turing-modified-cloud-diffusion-repo"
authors = [
    {name = "Alan Turing Institute", email = "clouds@turing.ac.uk"},
]
version = "0.1.0"
description = "Implementation of TuringCloudDiffusionModel."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloudcasting @ git+https://github.com/alan-turing-institute/cloudcasting.git@v0.4.0",
    "git+https://github.com/tcapelle/cloud_diffusion"
]
